idl-toolkit/models/oldtest/test/errors/custom/EmptyCustomException.vmodl
/* **********************************************************
 * Copyright 2013 VMware, Inc.  All rights reserved.
 *      -- VMware Confidential
 * **********************************************************/
package com.vmware.vapi.test.errors.custom;

/** Custom Exception type with no fields */
class EmptyCustomException extends Exception {
}
